# saipling-rust-app

./: README.md  SAPLING_METHOD.md  SPEC.md  index.html  package.json  pnpm-lock.yaml  saipling-filesystem-spec.md  saipling-vector-search-spec.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: binaries-needed.txt
src-tauri/capabilities/: default.json
src-tauri/data/: genres.toml
src-tauri/defaults/: models.toml
src-tauri/defaults/templates/: back-matter-about-the-author.md  back-matter-acknowledgments.md  back-matter-afterword.md  back-matter-epilogue.md  back-matter-glossary.md  beat-01-opening-image.md  beat-02-daily-life.md  beat-03-inciting-incident.md  beat-04-reluctance-moment.md  beat-05-point-of-departure.md  beat-06-first-challenge.md  beat-07-end-of-known-world.md  beat-08-new-reality.md  beat-09-initial-progress.md  beat-10-strengthening-allies.md  beat-11-midpoint-shift.md  beat-12-growing-opposition.md  beat-13-moment-of-doubt.md  beat-14-renewed-determination.md  beat-15-ultimate-challenge.md  beat-16-darkest-moment.md  beat-17-final-decision.md  beat-19-resolution.md  (+53 more)
src-tauri/skills/: brainstorm.toml  character_developer.toml  consistency_checker.toml  describe.toml  dialogue_crafter.toml  front_back_matter_writer.toml  genre_specialist.toml  overview_generator.toml  prose_editor.toml  prose_writer.toml  relationship_mapper.toml  researcher.toml  scene_architect.toml  seed_developer.toml  series_arc_planner.toml  structure_analyst.toml  world_builder.toml
src-tauri/src/: error.rs  lib.rs  main.rs  watcher.rs
(+128 files in other folders)
